# beid_mw

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
beid_mw/: __init__.py  logger.py  main.py  test_pykcs11.py
docker/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  debug.sh  docker-compose.yml  eid-archive_latest.deb  eid-released.gpg  run-container.sh  start-dev.sh  start.sh
docs/: CHANGELOG.md
