[project]
name = "beid-mw"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{name = "mamisoa", email = "mamisoa@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pykcs11>=1.5.17",
    "uvicorn>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
